--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.0",
+    "create2": "^1.2.3",
     "ejs": "^2.5.6",
-    "express": "^4.15.0"
+    "express": "^4.15.0",
+    "request": "^2.80.0",
+    "socket.io": "^1.7.3"
   }
 }
