--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.0",
     "request": "^2.80.0",
+    "robotjs": "^0.4.5",
     "socket.io": "^1.7.3"
   }
 }
