--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "actions-on-google": "^1.0.7",
     "body-parser": "^1.17.0",
     "create2": "^1.2.3",
     "ejs": "^2.5.6",
